Fix alignment and make the root div centered
Add resizing and center alignment to the overall oldagram view

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -3,6 +3,14 @@ html, body {
     padding: 0;
 }
 
+#root{
+    margin: 0 auto;
+    width: 375px;
+
+    display: flex;
+    flex-direction: column;
+}
+
 /* Header section of Oldagram */
 header{
     display: flex;
